tests/baselines/reference/structConstructorParametersAccessibility.errors.txt
tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorParametersAccessibility.ts(15,1): error TS20018: Property 'p' is private and only accessible within struct 'C2'.
tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorParametersAccessibility.ts(22,1): error TS20019: Property 'p' is protected and only accessible within struct 'C3' and its substructs.


==== tests/cases/conformance/structs/constructorDeclarations/constructorParameters/structConstructorParametersAccessibility.ts (2 errors) ====
    // doc 3.1
    // Only public and private modifiers are allowed for constructor parameters, but not protected.
    
    struct C1 {
        constructor(public x: number) { }
    }
    var c1: C1;
    c1.x // OK
    
    
    struct C2 {
        constructor(private p: number) { }
    }
    var c2: C2;
    c2.p // private, error
    ~~~~
!!! error TS20018: Property 'p' is private and only accessible within struct 'C2'.
    
    
    struct C3 {
        constructor(protected p: number) { } // error
    }
    var c3: C3;
    c3.p // protected, error
    ~~~~
!!! error TS20019: Property 'p' is protected and only accessible within struct 'C3' and its substructs.
    
    